fine-tuned model

--- a/fine-tuning/fine-tuning.ipynb
+++ b/fine-tuning/fine-tuning.ipynb
@@ -491,12 +491,185 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
     "# data collator for padding in equal size and much efficient pre processing like eos token etc.\n",
+    "\n",
+    "from transformers import DataCollatorForLanguageModeling"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DataCollatorForLanguageModeling(tokenizer=GPT2TokenizerFast(name_or_path='distilgpt2', vocab_size=50257, model_max_length=1024, is_fast=True, padding_side='right', truncation_side='right', special_tokens={'bos_token': '<|endoftext|>', 'eos_token': '<|endoftext|>', 'unk_token': '<|endoftext|>', 'pad_token': '<|endoftext|>'}, clean_up_tokenization_spaces=False, added_tokens_decoder={\n",
+      "\t50256: AddedToken(\"<|endoftext|>\", rstrip=False, lstrip=False, single_word=False, normalized=True, special=True),\n",
+      "}\n",
+      "), mlm=False, mlm_probability=0.15, mask_replace_prob=0.8, random_replace_prob=0.1, pad_to_multiple_of=None, tf_experimental_compile=False, return_tensors='pt', seed=None)\n"
+     ]
+    }
+   ],
+   "source": [
+    "data_collator = DataCollatorForLanguageModeling(tokenizer=tokenizer, mlm=False)\n",
+    "print(data_collator)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "scaling = 8\n",
+    "aplpha = 32\n",
+    "\n",
+    "\n",
+    "which means  -> alpha / scaling.\n",
+    "\n",
+    "32 / 8 = 4\n",
+    "\n",
+    "out put gets maximized or sclaed or zoomed to 4 times.\n",
+    "\n",
+    "dropout for stability -> which reduces over fitting. which makes the weights 0 and vary the weights. fine tune happens only when the wights adjusts itself. \n",
+    "\n",
+    "bias = \"none\" which tells to fine-tune the parameters only in lora. don't touch the base model.\n",
+    "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from peft import get_peft_model, LoraConfig, TaskType"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lora_config = LoraConfig(\n",
+    "    r = 8, # rank of lora matrices -> adjust it for speed or memory tradeoff\n",
+    "    lora_alpha=32, # this is scaling factor\n",
+    "    bias = \"none\", # no extra bias parameters\n",
+    "    lora_dropout=0.1, # drop out for stability.\n",
+    "    task_type=TaskType.CAUSAL_LM #since we are fine tuning GPT style models.\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "\n",
+    "Apply the mentioned LoRa to the model\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/thangaraj/Documents/Krish Naik/Agentic AI/venv/lib/python3.13/site-packages/peft/tuners/lora/layer.py:1768: UserWarning: fan_in_fan_out is set to False but the target module is `Conv1D`. Setting fan_in_fan_out to True.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = get_peft_model(model, lora_config)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "trainable params: 147,456 || all params: 82,060,032 || trainable%: 0.1797\n"
+     ]
+    }
+   ],
+   "source": [
+    "model.print_trainable_parameters()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "Lets start taining\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "TrainingArguments.__init__() got an unexpected keyword argument 'evaluation_strategy'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[38]\u001b[39m\u001b[32m, line 6\u001b[39m\n\u001b[32m      4\u001b[39m optimizer = AdamW(model.parameters(), lr=\u001b[32m1e-5\u001b[39m)\n\u001b[32m      5\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mtransformers\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m TrainingArguments, Trainer\n\u001b[32m----> \u001b[39m\u001b[32m6\u001b[39m training_args = \u001b[43mTrainingArguments\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m      7\u001b[39m \u001b[43moutput_dir\u001b[49m\u001b[43m=\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43m./output\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[32m      8\u001b[39m \u001b[43mevaluation_strategy\u001b[49m\u001b[43m=\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mepoch\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[32m      9\u001b[39m \u001b[38;5;66;43;03m#save_strategy=\"epoch\",\u001b[39;49;00m\n\u001b[32m     10\u001b[39m \u001b[43msave_steps\u001b[49m\u001b[43m=\u001b[49m\u001b[32;43m500\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[32m     11\u001b[39m \u001b[43mlearning_rate\u001b[49m\u001b[43m=\u001b[49m\u001b[32;43m1e-5\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[32m     12\u001b[39m \u001b[43mweight_decay\u001b[49m\u001b[43m=\u001b[49m\u001b[32;43m0.01\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[32m     13\u001b[39m \u001b[43mnum_train_epochs\u001b[49m\u001b[43m=\u001b[49m\u001b[32;43m3\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;66;43;03m# gives the data 3 times / trains 3 times\u001b[39;49;00m\n\u001b[32m     14\u001b[39m \u001b[43mper_device_train_batch_size\u001b[49m\u001b[43m=\u001b[49m\u001b[32;43m2\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m    \u001b[49m\u001b[38;5;66;43;03m# Batch size (adjust for GPU memory)\u001b[39;49;00m\n\u001b[32m     15\u001b[39m \u001b[43mper_device_eval_batch_size\u001b[49m\u001b[43m=\u001b[49m\u001b[32;43m2\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[32m     16\u001b[39m \u001b[43mlogging_steps\u001b[49m\u001b[43m=\u001b[49m\u001b[32;43m50\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[32m     17\u001b[39m \u001b[43mlogging_dir\u001b[49m\u001b[43m=\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43m./logs\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[32m     18\u001b[39m \u001b[43mresume_from_checkpoint\u001b[49m\u001b[43m=\u001b[49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[38;5;66;43;03m# incase of disruption, resume from the check point.\u001b[39;49;00m\n\u001b[32m     19\u001b[39m \u001b[43m)\u001b[49m\n\u001b[32m     20\u001b[39m trainer = Trainer(\n\u001b[32m     21\u001b[39m     model = model,\n\u001b[32m     22\u001b[39m     train_dataset=tokenized_dataset[\u001b[33m\"\u001b[39m\u001b[33mtrain\u001b[39m\u001b[33m\"\u001b[39m],\n\u001b[32m   (...)\u001b[39m\u001b[32m     26\u001b[39m     data_collator=data_collator\n\u001b[32m     27\u001b[39m )\n\u001b[32m     28\u001b[39m trainer.train()\n",
+      "\u001b[31mTypeError\u001b[39m: TrainingArguments.__init__() got an unexpected keyword argument 'evaluation_strategy'"
+     ]
+    }
+   ],
+   "source": [
+    "model.train() #This ensures layers like Dropout & BatchNorm are active during training.\n",
+    "from torch.optim import AdamW  # Correct import\n",
+    "# Define new optimizer\n",
+    "optimizer = AdamW(model.parameters(), lr=1e-5)\n",
+    "from transformers import TrainingArguments, Trainer\n",
+    "training_args = TrainingArguments(\n",
+    "output_dir=\"./output\",\n",
+    "# evaluation_strategy=\"epoch\",\n",
+    "#save_strategy=\"epoch\",\n",
+    "save_steps=500,\n",
+    "learning_rate=1e-5,\n",
+    "weight_decay=0.01,\n",
+    "num_train_epochs=3, # gives the data 3 times / trains 3 times\n",
+    "per_device_train_batch_size=2,    # Batch size (adjust for GPU memory)\n",
+    "per_device_eval_batch_size=2,\n",
+    "logging_steps=50,\n",
+    "logging_dir=\"./logs\",\n",
+    "resume_from_checkpoint=True # incase of disruption, resume from the check point.\n",
+    ")\n",
+    "trainer = Trainer(\n",
+    "    model = model,\n",
+    "    train_dataset=tokenized_dataset[\"train\"],\n",
+    "    eval_dataset=tokenized_dataset[\"test\"],\n",
+    "    args=training_args,\n",
+    "    optimizers=(optimizer, None),\n",
+    "    data_collator=data_collator\n",
+    ")\n",
+    "trainer.train()\n"
    ]
   }
  ],
